Installing tailwind and styling pages using tailwind

--- a/airbnb_backend_project/views/home.html
+++ b/airbnb_backend_project/views/home.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Airbnb Home</title>
+    <link rel="stylesheet" href="./output.css" />
   </head>
   <body>
-    <h1>Welcome to the Airbnb Backend!</h1>
-    <a href="/host/add-home">Add Home</a>
+    <h1 class="text-3xl text-teal-500 font-bold">
+      Welcome to the Airbnb Backend!
+    </h1>
+    <a href="/host/add-home" class="underline">Add Home</a>
   </body>
 </html>
