--- a/airbnb_backend_project/views/homeAdded.ejs
+++ b/airbnb_backend_project/views/homeAdded.ejs
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>404 Not Found</title>
+    <title>Home Registered</title>
     <link rel="stylesheet" href="/output.css" />
   </head>
   <body>
+    <%- include('partials/header') %>
     <main
       class="max-w-2xl mx-auto text-center mt-16 shadow-md shadow-teal-100 p-8"
     >
-      <h1 class="text-teal-600 font-semibold">404 Not Found.</h1>
-      <p class="my-5 text-gray-600">
-        Your requested page is not found on airbnb
-      </p>
+      <h1 class="text-teal-600 font-semibold">
+        Your home is now registered...
+      </h1>
       <a
         href="/"
         class="px-8 py-2 border border-teal-500 mt-6 block w-fit mx-auto hover:!bg-teal-500 duration-300 rounded"
-        >Return to Earth</a
+        >Return to Home</a
       >
     </main>
   </body>
