--- a/airbnb_backend_project/views/home.ejs
+++ b/airbnb_backend_project/views/home.ejs
@@ -8,20 +8,39 @@
   </head>
   <body>
     <%- include('partials/header') %>
-    <main class="max-w-2xl mx-auto mt-16 shadow-md shadow-teal-100 p-8">
+    <main class="max-w-7xl mx-auto mt-16 shadow-md shadow-teal-100 p-8">
       <h1 class="text-3xl text-teal-500 font-bold text-center">
         Welcome to the Airbnb Backend!
       </h1>
       <h4 class="my-3 font-medium text-gray-600">
         Here are out registered homes:
       </h4>
-      <ul class="flex flex-col space-y-2 list-disc">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3">
         <% registeredHomes.forEach(home => { %>
-        <li class="shadow-xs shadow-teal-200 py-2">
-          <h5><%= home.homeName %></h5>
-        </li>
+        <article class="shadow-xs shadow-teal-200 w-full">
+          <!-- Image -->
+          <div class="w-full h-64 overflow-hidden">
+            <img
+              src="<%= home.picture %>"
+              alt="<%= home.housename %>"
+              class="w-full h-full object-cover hover:scale-110 duration-300 cursor-pointer"
+            />
+          </div>
+
+          <!-- Content -->
+          <div class="p-5">
+            <h3 class="font-semibold text-lg"><%= home.housename %></h3>
+            <h3 class="text-sm text-gray-500"><%= home.location %></h3>
+            <h5 class="font-semibold inline-block">
+              <%= home.price %> / night
+            </h5>
+            <span class="text-xs text-gray-600 ml-16"
+              >Rating: <%= home.rating %></span
+            >
+          </div>
+        </article>
         <% }) %>
-      </ul>
+      </div>
     </main>
   </body>
 </html>
