--- a/airbnb_backend_project/views/partials/header.ejs
+++ b/airbnb_backend_project/views/partials/header.ejs
@@ -1,6 +1,12 @@
 <header class="p-8 bg-teal-200 space-x-3">
-  <a href="/" class="hover:text-teal-700 hover:underline">Go to Home</a>
-  <a href="/host/add-home" class="hover:text-teal-700 hover:underline"
+  <a
+    href="/"
+    class="<%= currentPage === 'Home' ? '!bg-teal-700 text-white':'hover:bg-teal-700' %> px-4 py-1.5"
+    >Home</a
+  >
+  <a
+    href="/host/add-home"
+    class="<%= currentPage === 'addHome' ? '!bg-teal-700 text-white':'hover:!bg-teal-700 hover:text-white' %> px-4 py-1.5"
     >Add Home</a
   >
 </header>
