Taking airbnb project to next level. Dividing views into host and store and adding their respective paths and controllers.

--- a/airbnb_backend_project/views/host/addHome.ejs
+++ b/airbnb_backend_project/views/host/addHome.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/output.css" />
   </head>
   <body>
-    <%- include('partials/header') %>
+    <%- include('../partials/header') %>
     <main
       class="max-w-2xl mx-auto mt-16 shadow-md shadow-teal-100 p-8 space-y-3"
     >
