--- a/airbnb_backend_project/views/host/homeAdded.ejs
+++ b/airbnb_backend_project/views/host/homeAdded.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/output.css" />
   </head>
   <body>
-    <%- include('partials/header') %>
+    <%- include('../partials/header') %>
     <main
       class="max-w-2xl mx-auto text-center mt-16 shadow-md shadow-teal-100 p-8"
     >
