--- a/airbnb_backend_project/views/store/home-list.ejs
+++ b/airbnb_backend_project/views/store/home-list.ejs
@@ -38,6 +38,12 @@
               >Rating: <%= home.rating %></span
             ><br /><br />
 
+            <a
+              href="/homes/<%= home.id %>"
+              class="!bg-blue-500 p-2 w-full cursor-pointer duration-300 hover:!bg-blue-400 rounded block text-center mb-3"
+              >Details</a
+            >
+
             <button
               type="button"
               class="bg-teal-500 p-2 w-full cursor-pointer duration-300 hover:bg-teal-400 rounded"
