--- a/airbnb_backend_project/views/store/home-list.ejs
+++ b/airbnb_backend_project/views/store/home-list.ejs
@@ -44,12 +44,7 @@
               >Details</a
             >
 
-            <button
-              type="button"
-              class="bg-teal-500 p-2 w-full cursor-pointer duration-300 hover:bg-teal-400 rounded"
-            >
-              Book Now
-            </button>
+            <%- include("../partials/favourites", {home: home}) %>
           </div>
         </article>
         <% }) %>
