--- a/airbnb_backend_project/public/output.css
+++ b/airbnb_backend_project/public/output.css
@@ -17,6 +17,8 @@
     --color-teal-700: oklch(51.1% 0.096 186.391);
     --color-blue-400: oklch(70.7% 0.165 254.624);
     --color-blue-500: oklch(62.3% 0.214 259.815);
+    --color-purple-500: oklch(62.7% 0.265 303.9);
+    --color-purple-950: oklch(29.1% 0.149 302.717);
     --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-600: oklch(44.6% 0.03 256.802);
@@ -204,6 +206,9 @@
   .my-5 {
     margin-block: calc(var(--spacing) * 5);
   }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
+  }
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
@@ -231,6 +236,9 @@
   .grid {
     display: grid;
   }
+  .hidden {
+    display: none;
+  }
   .inline-block {
     display: inline-block;
   }
@@ -246,11 +254,14 @@
   .h-80 {
     height: calc(var(--spacing) * 80);
   }
-  .h-\[1px\] {
-    height: 1px;
-  }
   .h-full {
     height: 100%;
+  }
+  .w-\[200px\] {
+    width: 200px;
+  }
+  .w-\[300px\] {
+    width: 300px;
   }
   .w-fit {
     width: fit-content;
@@ -341,9 +352,6 @@
   .\!bg-blue-500 {
     background-color: var(--color-blue-500) !important;
   }
-  .\!bg-gray-800 {
-    background-color: var(--color-gray-800) !important;
-  }
   .\!bg-teal-700 {
     background-color: var(--color-teal-700) !important;
   }
@@ -353,8 +361,8 @@
   .bg-gray-300 {
     background-color: var(--color-gray-300);
   }
-  .bg-gray-800 {
-    background-color: var(--color-gray-800);
+  .bg-purple-500 {
+    background-color: var(--color-purple-500);
   }
   .bg-red-500 {
     background-color: var(--color-red-500);
@@ -382,6 +390,9 @@
   }
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
+  }
+  .px-10 {
+    padding-inline: calc(var(--spacing) * 10);
   }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
@@ -519,6 +530,13 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-blue-400);
+      }
+    }
+  }
+  .hover\:bg-purple-950 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-purple-950);
       }
     }
   }
