--- a/airbnb_backend_project/views/host/host-home-list.ejs
+++ b/airbnb_backend_project/views/host/host-home-list.ejs
@@ -38,18 +38,24 @@
             <div
               class="mt-4 flex justify-between items-center gap-5 text-white"
             >
-              <button
-                type="button"
-                class="bg-blue-500 p-2 w-full cursor-pointer duration-300 hover:bg-blue-400 rounded"
+              <a
+                href="/host/edit-home/<%= home.id %>?editing=true"
+                class="!bg-blue-500 p-2 w-full cursor-pointer duration-300 hover:!bg-blue-400 rounded text-center"
               >
                 Edit
-              </button>
-              <button
-                type="button"
-                class="bg-red-500 p-2 w-full cursor-pointer duration-300 hover:bg-red-400 rounded"
+              </a>
+              <form
+                action="/host/delete-home/<%= home.id %>"
+                method="POST"
+                class="w-full"
               >
-                Delete
-              </button>
+                <button
+                  type="submit"
+                  class="bg-red-500 p-2 w-full cursor-pointer duration-300 hover:bg-red-400 rounded"
+                >
+                  Delete
+                </button>
+              </form>
             </div>
           </div>
         </article>
