--- a/airbnb_backend_project/views/store/favourite-list.ejs
+++ b/airbnb_backend_project/views/store/favourite-list.ejs
@@ -45,6 +45,15 @@
               >Details</a
             >
           </div>
+
+          <form action="/favourite/delete/<%= home.id %>" method="POST">
+            <button
+              type="submit"
+              class="bg-red-500 p-2 w-full cursor-pointer duration-300 hover:bg-red-400 rounded"
+            >
+              Remove from Favs
+            </button>
+          </form>
         </article>
         <% }) %>
       </div>
