--- a/airbnb_backend_project/views/store/favourite-list.ejs
+++ b/airbnb_backend_project/views/store/favourite-list.ejs
@@ -40,13 +40,13 @@
             ><br /><br />
 
             <a
-              href="/homes/<%= home.id %>"
+              href="/homes/<%= home._id %>"
               class="!bg-blue-500 p-2 w-full cursor-pointer duration-300 hover:!bg-blue-400 rounded block text-center mb-3"
               >Details</a
             >
           </div>
 
-          <form action="/favourite/delete/<%= home.id %>" method="POST">
+          <form action="/favourite/delete/<%= home._id %>" method="POST">
             <button
               type="submit"
               class="bg-red-500 p-2 w-full cursor-pointer duration-300 hover:bg-red-400 rounded"
