--- a/airbnb_backend_project/views/store/home-list.ejs
+++ b/airbnb_backend_project/views/store/home-list.ejs
@@ -39,7 +39,7 @@
             ><br /><br />
 
             <a
-              href="/homes/<%= home.id %>"
+              href="/homes/<%= home._id %>"
               class="!bg-blue-500 p-2 w-full cursor-pointer duration-300 hover:!bg-blue-400 rounded block text-center mb-3"
               >Details</a
             >
