--- a/airbnb_backend_project/views/host/edit-home.ejs
+++ b/airbnb_backend_project/views/host/edit-home.ejs
@@ -19,7 +19,7 @@
         method="POST"
         class="flex flex-col gap-4 mt-5 shadow-xl shadow-teal-100 p-8"
       >
-        <input type="hidden" name="id" value="<%= editing ? home.id : '' %>" />
+        <input type="hidden" name="id" value="<%= editing ? home._id : '' %>" />
         <!-- Input Container -->
         <div class="flex flex-col gap-1 text-gray-600">
           <label for="housename">House Name:</label>
