Installing and setting up mongoose

--- a/airbnb_backend_project/views/host/edit-home.ejs
+++ b/airbnb_backend_project/views/host/edit-home.ejs
@@ -26,7 +26,7 @@
           <input
             type="text"
             name="housename"
-            value="<%= editing ? home.housename : '' %>"
+            value="<%= editing ? home.houseName : '' %>"
             placeholder="Home Name"
             required
             class="block border border-teal-500 w-full px-4 py-3 rounded outline-none"
