--- a/airbnb_backend_project/views/store/favourite-list.ejs
+++ b/airbnb_backend_project/views/store/favourite-list.ejs
@@ -23,14 +23,14 @@
           <div class="w-full h-64 overflow-hidden">
             <img
               src="<%= home.picture %>"
-              alt="<%= home.housename %>"
+              alt="<%= home.houseName %>"
               class="w-full h-full object-cover hover:scale-110 duration-300 cursor-pointer"
             />
           </div>
 
           <!-- Content -->
           <div class="p-5">
-            <h3 class="font-semibold text-lg"><%= home.housename %></h3>
+            <h3 class="font-semibold text-lg"><%= home.houseName %></h3>
             <h3 class="text-sm text-gray-500"><%= home.location %></h3>
             <h5 class="font-semibold inline-block">
               Rs <%= home.price %> / night
