--- a/airbnb_backend_project/public/output.css
+++ b/airbnb_backend_project/public/output.css
@@ -15,15 +15,18 @@
     --color-teal-500: oklch(70.4% 0.14 182.503);
     --color-teal-600: oklch(60% 0.118 184.704);
     --color-teal-700: oklch(51.1% 0.096 186.391);
+    --color-teal-900: oklch(38.6% 0.063 188.416);
     --color-blue-400: oklch(70.7% 0.165 254.624);
     --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-purple-500: oklch(62.7% 0.265 303.9);
+    --color-purple-700: oklch(49.6% 0.265 301.924);
     --color-purple-950: oklch(29.1% 0.149 302.717);
     --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-xl: 36rem;
     --container-2xl: 42rem;
     --container-3xl: 48rem;
     --container-7xl: 80rem;
@@ -226,6 +229,9 @@
   .ml-16 {
     margin-left: calc(var(--spacing) * 16);
   }
+  .\!flex {
+    display: flex !important;
+  }
   .block {
     display: block;
   }
@@ -270,6 +276,9 @@
   }
   .max-w-7xl {
     max-width: var(--container-7xl);
+  }
+  .max-w-xl {
+    max-width: var(--container-xl);
   }
   .cursor-pointer {
     cursor: pointer;
@@ -333,11 +342,17 @@
     --tw-border-style: none;
     border-style: none;
   }
+  .border-teal-200 {
+    border-color: var(--color-teal-200);
+  }
   .border-teal-500 {
     border-color: var(--color-teal-500);
   }
   .\!bg-blue-500 {
     background-color: var(--color-blue-500) !important;
+  }
+  .\!bg-purple-700 {
+    background-color: var(--color-purple-700) !important;
   }
   .\!bg-teal-700 {
     background-color: var(--color-teal-700) !important;
@@ -363,6 +378,9 @@
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
+  .p-4 {
+    padding: calc(var(--spacing) * 4);
+  }
   .p-5 {
     padding: calc(var(--spacing) * 5);
   }
@@ -371,6 +389,9 @@
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
+  }
+  .px-6 {
+    padding-inline: calc(var(--spacing) * 6);
   }
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
@@ -486,6 +507,13 @@
       }
     }
   }
+  .hover\:\!bg-purple-950 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-purple-950) !important;
+      }
+    }
+  }
   .hover\:\!bg-teal-500 {
     &:hover {
       @media (hover: hover) {
@@ -525,6 +553,13 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-teal-700);
+      }
+    }
+  }
+  .hover\:bg-teal-900 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-teal-900);
       }
     }
   }
